<resources>

    <!--apps and activity titles-->
    <string name="app_name">Family Protector</string>
    <string name="title_activity_choosingmode">choosingmode</string>
    <string name="title_activity_choosemode">choosemode</string>
    <string name="title_activity_parent_home_screen">Parent Home Screen</string>
    <string name="title_activity_add_child_details">Add A Child</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_child_home_screen">Child Home Screen</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_rules_setter">Rules Setter</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_geofences">geofencesActivity</string>
    <string name="title_activity_child_detail">ChildDetailActivity</string>
    <string name="title_activity_save_rule_location">SaveRuleLocationActivity</string>
    <string name="title_activity_child_location_rule_save">ChildLocationRuleSaveActivity</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Action Strings -->
    <string name="action_search">Search</string>


    <!-- Various widget strings-->
    <string name="child_details">Child Details</string>
    <string name="child_name">Child Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth Day</string>
    <string name="child_home_setup_text">Welcome to the Family Protector android app. \n \n     This application help you stay safe.
    It will help your parents to track your location. \n \n             Thank you for your co-operation!!</string>

<!-- Preference Screen Strings-->
    <string name="pref_child_name_key" translatable = "false">childNamePref</string>
    <string name="pref_child_name_default" translatable="false">Child name</string>
    <string name="pref_child_gender_key" translatable = "false">genderPref</string>
    <string name="pref_child_gender_male" translatable = "false">Male</string>
    <string name="pref_child_gender_female" translatable = "false">Female</string>
    <string name="pref_child_gender_label_male" translatable = "false">Male</string>
    <string name="pref_child_gender_label_female" translatable = "false">Female</string>
    <string name="pref_child_birthdate_key">btnDateFilter</string>



    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">entered</string>
    <string name="geofence_transition_exited">exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>




    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Child Profile Settings</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_family">My Family</string>
    <string name="choose_child_phone">Who does the phone belong to?</string>
    <string name="login_link">Already a member? Sign In</string>
    <string name="choose_child_text1">Please choose</string>
    <string name="choose_child_text2">who this device belongs to.</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="change_child">Change child for this phone</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="alerts">Alerts</string>
    <string name="rules">Rules</string>
    <string name="continue_button">Continue</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="button_location_perimeter">Location Perimeter</string>
    <string name="button_save_text">Save</string>


    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="dialog_title">Save the location</string>
    <string name="dialog_child">Rule For :</string>
    <string name="dialog_address">Address :</string>
    <string name="date">Date :</string>
    <string name="days">Days :</string>
    <string name="time">Time :</string>
    <string name="dialog_location_type">Location type :</string>
    <string name="location_name">Location name :</string>
    <string name="dialog_select_days">Select Days :</string>
    <string name="dialog_location_perimeter">Location perimeter:</string>
    <string name="dialog_perimeter">Perimeter:</string>
    <string name="dialog_location_time_from">From :</string>
    <string name="dialog_location_time_to">To :</string>
    <string name="dialog_location_hint">E.g. school, home</string>
    <string name="dialog_perimeter_hint">Enter a radius for location</string>
    <string name="dialog_distance_units">meters</string>
    <string name="title_activity_child_home_screen_after_setup">ChildHomeScreenAfterSetup</string>
    <string name="title_activity_child_profile_settings">ChildProfileSettings</string>
    <string name="title_activity_child_alert_detail">ChildAlertDetailActivity</string>
    <string name="action_share">Share</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">Safety and security are top concerns for families everywhere. When it comes to safety and security, nothing is more important than protecting
        our most precious and vulnerable asset - our children. \n\nAt Family Protector, we
        have decades of experience developing and applying technologies that
        keep families safe and secure where they live, work and travel.</string>

    <string name="help_text">Please contact the author or the app for any issues. \n\nYou can email at amruta1209@gmail.com. \n\nWe will look into your concerns
    and try to provide help asap.</string>
    <string name="confirmation">Please provide valid credentials in order to logout.</string>

    <string name="setting_text">Come back later for more options!!</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="title_activity_child_profile_parent_settings">ChildProfileParentSettings</string>
    <string name="title_activity_child_rule_detail">ChildRuleDetailActivity</string>

</resources>
