<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.termproject.familyprotector.ChildLocationRuleSaveActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/rule_for_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_child"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_childName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rule_for_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_childName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_address"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_address_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_text_view"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/perimeter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_address_string"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_location_perimeter"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/location_perimeter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perimeter_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="meters"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/location_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_perimeter_value"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_location_type"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_type_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dialog_location_hint" />

    <TextView
        android:id="@+id/timepicker_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="85dp"
        android:text="@string/dialog_location_time_from"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/edit_location_name"
        android:layout_alignEnd="@+id/location_perimeter_value" />

    <TimePicker
        android:id="@+id/location_timepicker_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:timePickerMode="spinner"
        android:layout_below="@id/edit_location_name"
        android:layout_toEndOf="@id/location_perimeter_value" />

    <TextView
        android:id="@+id/timepicker_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/dialog_location_time_to"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/location_timepicker_to"
        android:layout_alignEnd="@id/timepicker_from_text"
        android:layout_marginBottom="85dp" />

    <TimePicker
        android:id="@+id/location_timepicker_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:timePickerMode="spinner"
        android:layout_marginRight="8dp"
        android:layout_below="@id/location_timepicker_from"
        android:layout_toEndOf="@id/location_perimeter_value" />

    <Button
        android:id="@+id/rule_location_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_text"
        android:padding="8dp"
        android:layout_below="@id/location_timepicker_to"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
</ScrollView>